amended front page links that were not originally linking correctly by wrapping curtain div with an anchor

--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ body {
   color: white;
 }
 
-/* Body Section: About Me ////////////////////////// */
+/* Main Page Portfolio Links ////////////////////////// */
 .portfolioLinksSection {
   width: 100%;
   height: 500px;
@@ -327,6 +327,10 @@ body {
 
 .developerCurtainTextBoxInnerTextCall {
   font-size: 12px;
+}
+
+.portfolioLinkAnchor {
+  text-decoration: none;
 }
 
 
